WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
203639
REGRESSION(
r251568
) If we didn't start a Service Worker, don't try talking to it
https://bugs.webkit.org/show_bug.cgi?id=203639
Summary
REGRESSION(r251568) If we didn't start a Service Worker, don't try talking to it
Dean Jackson
Reported
2019-10-30 15:57:16 PDT
REGRESSION(
r251568
) If we didn't start a Service Worker, don't try talking to it
Attachments
Patch
(3.53 KB, patch)
2019-10-30 16:00 PDT
,
Dean Jackson
cdumez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dean Jackson
Comment 1
2019-10-30 16:00:06 PDT
Created
attachment 382381
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-10-30 16:00:13 PDT
<
rdar://problem/56762071
>
Chris Dumez
Comment 3
2019-10-30 16:02:54 PDT
Comment on
attachment 382381
[details]
Patch r=me
Dean Jackson
Comment 4
2019-10-30 17:15:25 PDT
Committed
r251823
: <
https://trac.webkit.org/changeset/251823
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug