REGRESSION(r251568) If we didn't start a Service Worker, don't try talking to it https://bugs.webkit.org/show_bug.cgi?id=203639 <rdar://problem/56762071>

Reviewed by Chris Dumez.

Similar to the fix that introduced this regression, if the UI process does
not have the entitlement to start a service worker, we should not try
to load with one.

* NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::scheduleResourceLoad): If the
parent process doesn't have a service worker, use the regular load path.

Canonical link: https://commits.webkit.org/217016@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@251823 268f45cc-cd09-0410-ab3c-d52691b4dbfc